# 111224-e-pt

./: .gitignore  pyproject.toml
Модуль 2. Core Python/Урок 1. Данные и переменные/: print(sum[i for i in range(1, 11)])
Модуль 2. Core Python/Урок 14. Работа с файлами/: homework.py  live-coding.py
Модуль 2. Core Python/Урок 19. Библиотеки Data and Time, OS/: exercise_3.py  live-coding.py
Модуль 2. Core Python/Урок 4. Списки/: homework.py
Модуль 3. Advanced Python/Урок 1. Введение в ООП/src/Exercises/: 01 - Classes.py
Модуль 3. Advanced Python/Урок 10. Основы работы с сетью. Библиотека Request/src/Exercises/: mks.py
Модуль 3. Advanced Python/Урок 10. Основы работы с сетью. Библиотека Request/src/live-coding/: get-weather.py
Модуль 3. Advanced Python/Урок 11. Библиотека JSON/src/Exercises/: students.json  students.py
Модуль 3. Advanced Python/Урок 2. Методы init, del, new, classmethod, staticmethod/src/live-coding/: 01-Constructors_live-coding.py  02-Static_Class_method_live-coding.py  03-New_Singleton_live-coding.py
Модуль 3. Advanced Python/Урок 3. Инкапсуляция/src/Exercises/: 01-Getter_Setter.py  02-Property.py  03-descriptors.py
Модуль 3. Advanced Python/Урок 3. Инкапсуляция/src/live-coding/: 02-Property_live-coding.py
Модуль 3. Advanced Python/Урок 4. Магические методы классов. Часть 1/src/Exercises/: attr.py  func_decor.py  practice.py  practice_solve.py
Модуль 3. Advanced Python/Урок 9. Проектный урок. Написание Task Tracker. Часть 1/src/: config.yaml  main.py  manager.py  task.py
(+18 files in other folders)
