[project]
name = "111224-e-pt"
version = "0.1.0"
description = ""
authors = [
    {name = "Aleksandr Meshchriakov",email = "avm@sh-inc.ru"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
